0.39 2022-02-14
  [Compatible Intenal Changes]
    * Removed unused the Sys::Util class.
  [New Features]
    * Added the readlinkp method in the Sys::IO class.
    
      static method readlinkp : int ($test_dir : string);
  [Exception Message Improvement]
    * The following exception messages of the methods in the Sys::IO::Stat output the file name.
      [Before]
      -    "[System Error]lstat failed:%s"
      -    "[System Error]stat failed:%s
      [After]
      +    "[System Error]stat failed:%s. The specified file is \"%s\""
      +    "[System Error]lstat failed:%s. The specified file is \"%s\""
    * The following exception messages of the methods in the Sys::IO output the file name.
      [Before]
      - "[System Error]open failed:%s"
      - "[System Error]fopen failed:%s"
      - "[System Error]mkdir failed:%s"
      - "[System Error]rmdir failed:%s"
      - "[System Error]unlink failed:%s"
      - "[System Error]rename failed:%s"
      - "[System Error]realpath failed:%s"
      - "[System Error]_fullpath failed:%s"
      - "[System Error]chdir failed:%s"
      - "[System Error]chmod failed:%s"
      - "[System Error]chown failed:%s"
      - "[System Error]truncate failed:%s"
      - "[System Error]symlink failed:%s"
      - "[System Error]readlink failed:%s"
      - "[System Error]opendir failed:%s"
      - "[System Error]utime failed:%s"
      
      [After]
      + "[System Error]open failed:%s. The \"%s\" file can't be opend"
      + "[System Error]fopen failed:%s. The \"%s\" file can't be opend"
      + "[System Error]mkdir failed:%s. The \"%s\" directory can't be created"
      + "[System Error]rmdir failed:%s. The \"%s\" directory can't be removed"
      + "[System Error]unlink failed:%s. The \"%s\" directory can't be removed"name
      + "[System Error]rename failed:%s. The \"%s\" file can't be renamed to the \"%s\" file"
      + "[System Error]realpath failed:%s. The \"%s\" file can't be resolved"